--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -32,6 +32,11 @@ body{
   src: url('/assets/fonts/Roboto-Thin.ttf');
 }
 
+@font-face{
+  font-family: "regularized";
+  src: url('/assets/fonts/Roboto-Regular.ttf');
+}
+
 // Component styles are injected through grunt
 // injector
 @import 'about/about.scss';
