--- a/client/app/about/about.scss
+++ b/client/app/about/about.scss
@@ -16,6 +16,18 @@
   font-size: 01em;
 }
 
+.lower-about{
+  color: white;
+  font-family: regularized;
+}
+
+.quote{
+  color:white;
+  text-align: center;
+  font-family: custom;
+  font-size: 1.5em;
+}
+
 @media (max-width: 760px) {
   a{
     padding-bottom: 15px;
